# chess-app-api

./: .gitignore  Makefile   README.md  create_db.py  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
app/: config.py  main.py
app/core/: security.py
app/db/: database.py
app/db/models/: chess.py  player_profil.py  user.py
app/router/: auth.py  chess.py  chess_import.py  users.py
app/schemas/: user.py
app/services/: chess_import_service.py
scripts/: create_db.py  quality.py  test.py
